--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.3.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.0.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.0.12</version>
+        </dependency>
     </dependencies>
 
 </project>
